--- a/index.html
+++ b/index.html
@@ -294,6 +294,20 @@
 
     </section>
 
+    <!-- ======= Cta Section ======= -->
+    <section class="cta">
+      <div class="container">
+
+        <div class="text-center">
+          <h3>Your Financial Success Starts Now</h3>
+          <p> Take Action Today: Don't let your financial dreams remain on hold. Contact us now to schedule a consultation with one of our financial experts. Together, we will map out a strategy to turn your vision into tangible achievements..</p>
+          <a class="cta-btn" href="#">Contact Us Now</a>
+        </div>
+
+      </div>
+    </section><!-- End Cta Section -->
+
+
      <!-- ======= Features Section ======= -->
      <section class="features">
       <div class="container">
