--- a/about.html
+++ b/about.html
@@ -50,9 +50,9 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a href="index.html" class="active">Home</a></li>
+          <li><a href="index.html" >Home</a></li>
 
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html" class="active">About</a></li>
 
           <li class="dropdown"><a href="services.html"><span>Services</span> <i class = "bi bi-chevron-down"></i></a>
             <ul>
