--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
         <div class="row">
           <div class="col-md-5">
-            <img src="assets/img/features-1.svg" class="img-fluid" alt="">
+            <img src="assets/img/pic1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4">
             <h3>Expertise that Drives Results.</h3>
@@ -336,7 +336,7 @@
 
         <div class="row">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/features-2.svg" class="img-fluid" alt="">
+            <img src="assets/img/pic2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Client-Centric Approach</h3>
@@ -354,7 +354,7 @@
 
         <div class="row">
           <div class="col-md-5">
-            <img src="assets/img/features-3.svg" class="img-fluid" alt="">
+            <img src="assets/img/pic3.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5">
             <h3>Cutting-Edge Technology</h3>
@@ -369,7 +369,7 @@
 
         <div class="row">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/features-4.svg" class="img-fluid" alt="">
+            <img src="assets/img/pic4.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Holistic Financial Solutions</h3>
